plugins {
    id 'java'
}

dependencies {
    implementation fileTree(dir: 'src/libs', include: ['*.jar'])
    runtimeOnly fileTree(dir: 'src/libs', include: ['*.aar', '*.jar'], exclude: [])
    //implementation project(':smartreflow')
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}
